# climate_data_scraping

./: README.md  pyproject.toml
src/climate_data_scraping/: agregate_data.py  check_and_update_info.py  concatenate.py  delete_file.py  extract_data.py  find_dates.py
src/climate_data_scraping/history/: A001_20060101_20250513.csv  A005_20060101_20250513.csv  A016_20060101_20250513.csv  A017_20060101_20250513.csv  A023_20060101_20250513.csv  A024_20060101_20250513.csv  A031_20060101_20250513.csv  A032_20060101_20250513.csv  A033_20060101_20250513.csv  A034_20060101_20250513.csv  A036_20060101_20250513.csv  A037_20060101_20250513.csv  A046_20060101_20250513.csv  A056_20060101_20250513.csv  A506_20060101_20250513.csv  A507_20060101_20250513.csv  A509_20060101_20250513.csv  A514_20060101_20250513.csv  A515_20060101_20250513.csv  A519_20060101_20250513.csv  A520_20060101_20250513.csv  A521_20060101_20250513.csv  A523_20060101_20250513.csv  A525_20060101_20250513.csv  A526_20060101_20250513.csv  A528_20060101_20250513.csv  A530_20060101_20250513.csv  A535_20060101_20250513.csv  A536_20060101_20250513.csv  A537_20060101_20250513.csv  A540_20060101_20250513.csv  A541_20060101_20250513.csv  A542_20060101_20250513.csv  A543_20060101_20250513.csv  A546_20060101_20250513.csv  A548_20060101_20250513.csv  A549_20060101_20250513.csv  A550_20060101_20250513.csv  A551_20060101_20250513.csv  A552_20060101_20250513.csv  (+89 more)
src/climate_data_scraping/history_backup/: A002_20060101_20250513.csv  A003_20060101_20250513.csv  A011_20060101_20250513.csv  A012_20060101_20250513.csv  (+128 more)
(+265 files in other folders)
