[project]
name = "extrair-dados-nasa-power"
version = "0.1.0"
description = ""
authors = [
    {name = "RaulPH-fga",email = "raul.pozzi@fga.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "extrair_dados_nasa_power", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
